PIPELINE BACK/FRONT CONFIGURATION [DOCKERHUB/GIT_ACTION]